deploy/penguin-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: penguin-auth
  namespace: penguin
spec:
  selector:
    matchLabels:
      app: penguin-auth
  replicas: 2
  template:
    metadata:
      labels:
        app: penguin-auth
    spec:
      containers:
        - name: penguin-auth
          image: 10.105.58.187:5000/penguin-auth:142
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 5
